# dataxid-profiling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/dataxid_profiling/: __init__.py  _alerts.py  _config.py  _correlations.py  _dataset_overview.py  _ingest.py  _interactions.py  _type_inference.py
src/dataxid_profiling/_analyzers/: __init__.py  _boolean.py  _categorical.py  _datetime.py  _numeric.py  _text.py
src/dataxid_profiling/_report/: __init__.py  _charts.py  _html.py
src/dataxid_profiling/_report/templates/: report.html.j2
tests/: conftest.py  test_alerts.py  test_analyzer_boolean.py  test_analyzer_categorical.py  test_analyzer_datetime.py  test_analyzer_numeric.py  test_analyzer_text.py  test_chart_renderer.py  test_config.py  test_correlations.py  test_dataset_overview.py  test_dataset_overview_extended.py  test_html_report.py  test_ingest.py  test_interactions.py  test_profile_report.py  test_type_inference.py
