[project]
name = "dataxid-profiling"
version = "0.1.0"
description = "Fast, Polars-native data profiling. The modern alternative to ydata-profiling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Dataxid", email = "hello@dataxid.com" }]
keywords = ["polars", "profiling", "eda", "data-quality", "pandas-profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "polars>=1.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/dataxid/dataxid-profiling"
Documentation = "https://docs.dataxid.com/profiling"
Repository = "https://github.com/dataxid/dataxid-profiling"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataxid_profiling"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["dataxid_profiling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
